package com.dkdev.Model.DAO;

public enum EstadoPedido {
    PENDIENTE_ENTREGAR, PENDIENTE_COBRAR
}
